src/scss/custom.sass
=max($break)
  @media only screen and (max-width: $break+px)
    @content

=min($break)
  @media only screen and (min-width: $break+px)
    @content

body
  font-family: 'Commissioner', sans-serif

.header
  .navbar
    .nav-link
      position: relative
      padding: 10px 0
      +min(992)
        padding: 23px 24px 24px 0
      &::before
        content: ''
        position: absolute
        left: 0
        right: 0
        bottom: -1px
        height: 2px
        background: $orange
        opacity: 0
        transition: opacity .25s
        +min(992)
          right: 24px

      &.active
        font-weight: bold
        &::before
          opacity: 1

  .search
    position: relative
    width: 100%
    +min(992)
      max-width: 546px
      margin-left: 25px
    button
      position: absolute
      top: 0
      left: 0
      bottom: 0
      width: 44px
      display: flex
      justify-content: center
      align-items: center
      padding: 0
      font-size: 0
      line-height: 0
      background: rgba($dark_bg, 0)
      border: 0
    svg
      width: 24px
      height: 24px
    input
      height: 40px
      padding-left: 44px
      line-height: 1
      background: $light-grey
      border: 0
      box-shadow: none
      &::placeholder
        color: $body-color

  .dropdown
    +min(992)
      margin-left: 41px
    +min(1200)
      &:hover
        .btn
          color: $orange
          &::after
            background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' viewBox='0 0 24 24' fill='none'%3E%3Cpath d='M8 10L12 14L16 10' stroke='%23ED7135' stroke-width='2' stroke-linecap='square'/%3E%3C/svg%3E%0A")
    .btn
      display: inline-flex
      align-items: center
      color: inherit
      text-decoration: none
      &::after
        width: 24px
        height: 24px
        flex-shrink: 0
        margin: 0
        background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' viewBox='0 0 24 24' fill='none'%3E%3Cpath d='M8 10L12 14L16 10' stroke='%23666666' stroke-width='2' stroke-linecap='square'/%3E%3C/svg%3E%0A")
        border: 0

.login-link
  color: inherit
  text-decoration: none
  &:hover
    color: $orange

.nav-pills
  font-weight: bold
  svg
    width: 24px
    height: 24px
    fill: currentColor

+color-mode(dark)
  .nav-pills
    .nav-link
      color: $white
      &:not(.active)
        &:hover
          color: $orange

.plp-block
  padding-top: 56px
  .nav-pills
    +min(1200)
      margin-left: -12px
    .nav-link
      display: flex
      align-items: center
      line-height: 1

.plp-total
  font-size: 14px
  
.grid-sort-item 
  min-width: 88px
  padding: 8px 16px
  height: 40px
  color: $headings-color
  border: 2px solid $border-color
  border-radius: 8px 0 0 8px 
  background: rgba($black, 0)
  &:last-child
    border-radius: 0 8px 8px 0
  &.active
    color: $white
    background: $dark_bg
    border: 0

+color-mode(dark)
  .grid-sort-item 
    color: $white
    &.active
      background: $orange
  .card-title
    color: $white

.card-media
  position: relative
  font-size: 0
  &::before
    content: ''
    display: block
    padding-top: 56.5%
  img,iframe,video,picture
    position: absolute
    top: 0
    left: 0
    width: 100%
    height: 100%
    object-fit: cover
  
.card-footer
  flex-wrap: wrap
  .btn
    &:not(:last-child)
      margin-right: 16px

  
+color-mode(dark)
  .theme-toggle
    border-color: $white

.theme-toggle
  position: fixed
  left: 20px
  bottom: 20px
  padding: 2px
  border: 2px solid $orange
  border-radius: 50px
  font-size: 0
  background-color: $black
  .checkbox 
    opacity: 0
    position: absolute

  .checkbox-label 
    position: relative
    width: 50px
    height: 26px
    display: flex
    justify-content: space-between
    align-items: center
    padding: 5px
    cursor: pointer

  .moon 
    width: 20px
    fill: $orange
  .sun 
    width: 20px
    fill: $orange

  .checkbox-label .ball 
    position: absolute
    left: 2px
    top: 2px
    width: 22px
    height: 22px
    border-radius: 50%
    background-color: $white
    transition: transform 0.2s linear

  .checkbox:checked + .checkbox-label .ball 
    transform: translateX(24px)
  
.show-more
  display: block
  padding: 0
  border: 0
  font-weight: 500
  color: $headings-color
  background: rgba($white, 0)

